# tumbler

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: search-highlight-history.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: p1-pdfEngine.test.ts  p1-store.test.ts  p1-systemTheme.test.ts
src/components/: ContinuousViewer.tsx  IconRail.tsx  MetadataPanel.tsx  PageSlot.tsx  PrintDialog.tsx  SearchPanel.tsx  Sidebar.tsx  TabBar.tsx  ThumbnailPanel.tsx  Toolbar.tsx  ViewerArea.tsx
src/hooks/: useSidebarResize.ts
src/store/: usePdfStore.ts
src/styles/: global.css
src/test/: setup.ts
src/utils/: fileHelpers.ts  pageCache.ts  pdfEngine.ts  systemTheme.ts  viewerConstants.ts  zoomConstants.ts
