[package]
name = "tumbler"
version = "0.1.0"
description = "A personal PDF viewer and editor"
authors = ["you"]
edition = "2021"

[lib]
name = "tumbler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "UI_ViewManagement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
